[package]
name = "api"
version = "0.1.0"
authors = ["clpi <clp@clp.is>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
in-data = { path = "./in-data" }
in-http = { path = "./in-http" }
in-cloud = { path = "./in-cloud" }
