[package]
name = "in-data"
version = "0.1.0"
authors = ["clpi <clp@clp.is>"]
edition = "2018"
default-run = "main"

[lib]
name = "in_data"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/bin/main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.12.0"
chrono = "0.4.19"
petgraph = "0.5.1"
