[package]
name = "in-http"
version = "0.1.0"
authors = ["clpi <clp@clp.is>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "in_http"
path = "src/lib.rs"

[[bin]]
name = "in_http"
path = "src/bin/main.rs"

[dependencies]
in-data = { path = "../in-data" }
surf = "2.2.0"
tokio = { version = "1.6.1", features = ["full"] }
warp = "0.3.1"
